--- a/.htaccess
+++ b/.htaccess
@@ -134,7 +134,7 @@ RewriteRule ^email/insert/email php/email/insert.email.php [QSA,L]
 RewriteRule ^email/update/email php/email/update.email.php [QSA,L]
 
 # Filters
-RewriteRule ^filter/get/filters api/filter/get.filters.php [QSA,L]
+RewriteRule ^filter/get/filters php/filter/get.filters.php [QSA,L]
 
 # Hospital Map Section
 RewriteRule ^hospital-map/delete/hospital-map php/hospital-map/delete.hospital_map.php [QSA,L]
@@ -175,10 +175,10 @@ RewriteRule ^patient/update/patient php/patient/update.patient.php [QSA,L]
 
 # Post Section
 RewriteRule ^post/delete/post php/post/delete.post.php [QSA,L]
-RewriteRule ^post/get/post-chart-logs api/post/get.post_chart_logs.php [QSA,L]
-RewriteRule ^post/get/post-details api/post/get.post_details.php [QSA,L]
-RewriteRule ^post/get/post-list-logs api/post/get.post_list_logs.php [QSA,L]
-RewriteRule ^post/get/posts api/post/get.posts.php [QSA,L]
+RewriteRule ^post/get/post-chart-logs php/post/get.post_chart_logs.php [QSA,L]
+RewriteRule ^post/get/post-details php/post/get.post_details.php [QSA,L]
+RewriteRule ^post/get/post-list-logs php/post/get.post_list_logs.php [QSA,L]
+RewriteRule ^post/get/posts php/post/get.posts.php [QSA,L]
 RewriteRule ^post/insert/post php/post/insert.post.php [QSA,L]
 RewriteRule ^post/update/post-publish-flags php/post/update.post_publish_flags.php [QSA,L]
 RewriteRule ^post/update/post php/post/update.post.php [QSA,L]
@@ -186,15 +186,15 @@ RewriteRule ^post/update/post php/post/update.post.php [QSA,L]
 # Question Section
 RewriteRule ^question/delete/question php/questionnaire/delete.question.php [QSA,L]
 RewriteRule ^question/insert/question php/questionnaire/insert.question.php [QSA,L]
-RewriteRule ^question/get/question-details api/questionnaire/get.question_details.php [QSA,L]
-RewriteRule ^question/get/questions api/questionnaire/get.questions.php [QSA,L]
+RewriteRule ^question/get/question-details php/questionnaire/get.question_details.php [QSA,L]
+RewriteRule ^question/get/questions php/questionnaire/get.questions.php [QSA,L]
 RewriteRule ^question/update/question php/questionnaire/update.question.php [QSA,L]
 
 # Questionnaire Section
 RewriteRule ^questionnaire/delete/questionnaire php/questionnaire/delete.questionnaire.php [QSA,L]
-RewriteRule ^questionnaire/get/finalized-questions api/questionnaire/get.finalizedQuestions.php [QSA,L]
-RewriteRule ^questionnaire/get/questionnaires api/questionnaire/get.questionnaires.php [QSA,L]
-RewriteRule ^questionnaire/get/questionnaire-details api/questionnaire/get.questionnaire_details.php [QSA,L]
+RewriteRule ^questionnaire/get/finalized-questions php/questionnaire/get.finalizedQuestions.php [QSA,L]
+RewriteRule ^questionnaire/get/questionnaires php/questionnaire/get.questionnaires.php [QSA,L]
+RewriteRule ^questionnaire/get/questionnaire-details php/questionnaire/get.questionnaire_details.php [QSA,L]
 RewriteRule ^questionnaire/insert/questionnaire php/questionnaire/insert.questionnaire.php [QSA,L]
 RewriteRule ^questionnaire/update/questionnaire php/questionnaire/update.questionnaire.php [QSA,L]
 
@@ -210,14 +210,14 @@ RewriteRule ^publication/get/publication-modules php/publication/get.publication
 RewriteRule ^publication/insert/publication php/publication/insert.publication.php [QSA,L]
 
 # Library Section
-RewriteRule ^library/get/libraries api/questionnaire/get.libraries.php [QSA,L]
+RewriteRule ^library/get/libraries php/questionnaire/get.libraries.php [QSA,L]
 RewriteRule ^library/insert/library php/questionnaire/insert.library.php [QSA,L]
 
 # Template Question
 RewriteRule ^template-question/delete/template-question php/questionnaire/delete.template.question.php [QSA,L]
-RewriteRule ^template-question/get/template-question-list api/questionnaire/get.template_question_list.php [QSA,L]
-RewriteRule ^template-question/get/template-question-details api/questionnaire/get.template_question_details.php [QSA,L]
-RewriteRule ^template-question/get/templates-questions api/questionnaire/get.templates_questions.php [QSA,L]
+RewriteRule ^template-question/get/template-question-list php/questionnaire/get.template_question_list.php [QSA,L]
+RewriteRule ^template-question/get/template-question-details php/questionnaire/get.template_question_details.php [QSA,L]
+RewriteRule ^template-question/get/templates-questions php/questionnaire/get.templates_questions.php [QSA,L]
 RewriteRule ^template-question/insert/template-question php/questionnaire/insert.template_question.php [QSA,L]
 RewriteRule ^template-question/update/template-question php/questionnaire/update.template.question.php [QSA,L]
 
