--- a/.htaccess
+++ b/.htaccess
@@ -235,14 +235,14 @@ RewriteRule ^test-result/update/test-result php/test-result/update.test_result.p
 
 # User Section
 RewriteRule ^user/delete/user php/user/delete.user.php [QSA,L]
-RewriteRule ^user/get/roles api/user/get.roles.php [QSA,L]
-RewriteRule ^user/get/user-activity-logs api/user/get.user_activity_logs.php [QSA,L]
-RewriteRule ^user/get/user-details api/user/get.user_details.php [QSA,L]
-RewriteRule ^user/get/users api/user/get.users.php [QSA,L]
+RewriteRule ^user/get/roles php/user/get.roles.php [QSA,L]
+RewriteRule ^user/get/user-activity-logs php/user/get.user_activity_logs.php [QSA,L]
+RewriteRule ^user/get/user-details php/user/get.user_details.php [QSA,L]
+RewriteRule ^user/get/users php/user/get.users.php [QSA,L]
 RewriteRule ^user/insert/user php/user/insert.user.php [QSA,L]
 RewriteRule ^user/logout php/user/logout.php [QSA,L]
 RewriteRule ^user/update/language php/user/update.language.php [QSA,L]
 RewriteRule ^user/update/password php/user/update.password.php [QSA,L]
 RewriteRule ^user/update/user php/user/update.user.php [QSA,L]
-RewriteRule ^user/username-in-use api/user/username_in_use.php [QSA,L]
+RewriteRule ^user/username-in-use php/user/username_in_use.php [QSA,L]
 RewriteRule ^user/validate-login php/user/validate_login.php [QSA,L]
