--- a/.htaccess
+++ b/.htaccess
@@ -158,9 +158,6 @@ RewriteRule ^email/get/email-types api/email/get.email_types.php [QSA,L]
 RewriteRule ^email/insert/email php/email/insert.email.php [QSA,L]
 RewriteRule ^email/update/email php/email/update.email.php [QSA,L]
 
-# Filters
-RewriteRule ^filter/get/filters php/filter/get.filters.php [QSA,L]
-
 # Hospital Map Section
 RewriteRule ^hospital-map/delete/hospital-map php/hospital-map/delete.hospital_map.php [QSA,L]
 RewriteRule ^hospital-map/generate-qr-code api/hospital-map/generate_QR_code.php [QSA,L]
@@ -225,6 +222,7 @@ RewriteRule ^questionnaire/update/questionnaire php/questionnaire/update.questio
 # Publication Section
 RewriteRule ^publication/update/publish-flag php/publication/update.publish.flag.php [QSA,L]
 RewriteRule ^publication/update/publication php/publication/update.publication.php [QSA,L]
+RewriteRule ^publication/get/filters php/publication/get.publication.filters.php [QSA,L]
 RewriteRule ^publication/get/publication-chart-logs php/publication/get.publication.chart.logs.php [QSA,L]
 RewriteRule ^publication/get/publication-list-logs php/publication/get.publication.list.logs.php [QSA,L]
 RewriteRule ^publication/get/publication-details php/publication/get.publication.details.php [QSA,L]
