OPAL-265 - making the different modules independent of each others underway.

--- a/.htaccess
+++ b/.htaccess
@@ -86,6 +86,7 @@ RewriteRule ^alias/get/alias-details php/alias/get.alias_details.php [QSA,L]
 RewriteRule ^alias/get/alias-list-logs php/alias/get.alias_list_logs.php [QSA,L]
 RewriteRule ^alias/get/aliases php/alias/get.aliases.php [QSA,L]
 RewriteRule ^alias/get/color-tags php/alias/get.color_tags.php [QSA,L]
+RewriteRule ^alias/get/educational-materials php/alias/get.educational.materials.php [QSA,L]
 RewriteRule ^alias/get/expressions php/alias/get.expressions.php [QSA,L]
 RewriteRule ^alias/get/source-databases php/alias/get.source_databases.php [QSA,L]
 RewriteRule ^alias/insert/alias php/alias/insert.alias.php [QSA,L]
@@ -106,9 +107,10 @@ RewriteRule ^cron/update/cron php/cron/update.cron.php [QSA,L]
 
 # Diagnosis Translation Section
 RewriteRule ^diagnosis-translation/delete/diagnosis-translation php/diagnosis-translation/delete.diagnosis_translation.php [QSA,L]
-RewriteRule ^diagnosis-translation/get/diagnosis-translation-details api/diagnosis-translation/get.diagnosis_translation_details.php [QSA,L]
-RewriteRule ^diagnosis-translation/get/diagnosis-translations api/diagnosis-translation/get.diagnosis_translations.php [QSA,L]
-RewriteRule ^diagnosis-translation/get/diagnoses api/diagnosis-translation/get.diagnoses.php [QSA,L]
+RewriteRule ^diagnosis-translation/get/diagnosis-translation-details php/diagnosis-translation/get.diagnosis_translation_details.php [QSA,L]
+RewriteRule ^diagnosis-translation/get/diagnosis-translations php/diagnosis-translation/get.diagnosis_translations.php [QSA,L]
+RewriteRule ^diagnosis-translation/get/diagnoses php/diagnosis-translation/get.diagnoses.php [QSA,L]
+RewriteRule ^diagnosis-translation/get/educational-materials php/diagnosis-translation/get.educational.materials.php [QSA,L]
 RewriteRule ^diagnosis-translation/insert/diagnosis-translation php/diagnosis-translation/insert.diagnosis_translation.php [QSA,L]
 RewriteRule ^diagnosis-translation/update/diagnosis-translation php/diagnosis-translation/update.diagnosis_translation.php [QSA,L]
 
@@ -137,13 +139,13 @@ RewriteRule ^role/update/role php/role/update.role.php [QSA,L]
 
 # Educational Material Section
 RewriteRule ^educational-material/delete/educational-material php/educational-material/delete.educational_material.php [QSA,L]
-RewriteRule ^educational-material/get/educational-material-chart-logs api/educational-material/get.educational_material_chart_logs.php [QSA,L]
-RewriteRule ^educational-material/get/educational-material-details api/educational-material/get.educational_material_details.php [QSA,L]
-RewriteRule ^educational-material/get/educational-material-list-logs api/educational-material/get.educational_material_list_logs.php [QSA,L]
-RewriteRule ^educational-material/get/educational-material-parents api/educational-material/get.educational_material_parents.php [QSA,L]
-RewriteRule ^educational-material/get/educational-material-types api/educational-material/get.educational_material_types.php [QSA,L]
-RewriteRule ^educational-material/get/educational-materials api/educational-material/get.educational_materials.php [QSA,L]
-RewriteRule ^educational-material/get/phases-in-treatment api/educational-material/get.phases_in_treatment.php [QSA,L]
+RewriteRule ^educational-material/get/educational-material-chart-logs php/educational-material/get.educational_material_chart_logs.php [QSA,L]
+RewriteRule ^educational-material/get/educational-material-details php/educational-material/get.educational_material_details.php [QSA,L]
+RewriteRule ^educational-material/get/educational-material-list-logs php/educational-material/get.educational_material_list_logs.php [QSA,L]
+RewriteRule ^educational-material/get/educational-material-parents php/educational-material/get.educational_material_parents.php [QSA,L]
+RewriteRule ^educational-material/get/educational-material-types php/educational-material/get.educational_material_types.php [QSA,L]
+RewriteRule ^educational-material/get/educational-materials php/educational-material/get.educational_materials.php [QSA,L]
+RewriteRule ^educational-material/get/phases-in-treatment php/educational-material/get.phases_in_treatment.php [QSA,L]
 RewriteRule ^educational-material/insert/educational-material php/educational-material/insert.educational_material.php [QSA,L]
 RewriteRule ^educational-material/update/educational-material-publish-flags php/educational-material/update.educational_material_publish_flags.php [QSA,L]
 RewriteRule ^educational-material/update/educational-material php/educational-material/update.educational_material.php [QSA,L]
@@ -245,12 +247,13 @@ RewriteRule ^template-question/update/template-question php/questionnaire/update
 
 # Test Result Section
 RewriteRule ^test-result/delete/test-result php/test-result/delete.test_result.php [QSA,L]
-RewriteRule ^test-result/get/test-names api/test-result/get.test_names.php [QSA,L]
-RewriteRule ^test-result/get/test-result-chart-logs api/test-result/get.test_result_chart_logs.php [QSA,L]
-RewriteRule ^test-result/get/test-result-details api/test-result/get.test_result_details.php [QSA,L]
-RewriteRule ^test-result/get/test-result-groups api/test-result/get.test_result_groups.php [QSA,L]
-RewriteRule ^test-result/get/test-result-list-logs api/test-result/get.test_result_list_logs.php [QSA,L]
-RewriteRule ^test-result/get/test-results api/test-result/get.test_results.php [QSA,L]
+RewriteRule ^test-result/get/get/educational-materials php/test-result/get.educational.materials.php [QSA,L]
+RewriteRule ^test-result/get/test-names php/test-result/get.test_names.php [QSA,L]
+RewriteRule ^test-result/get/test-result-chart-logs php/test-result/get.test_result_chart_logs.php [QSA,L]
+RewriteRule ^test-result/get/test-result-details php/test-result/get.test_result_details.php [QSA,L]
+RewriteRule ^test-result/get/test-result-groups php/test-result/get.test_result_groups.php [QSA,L]
+RewriteRule ^test-result/get/test-result-list-logs php/test-result/get.test_result_list_logs.php [QSA,L]
+RewriteRule ^test-result/get/test-results php/test-result/get.test_results.php [QSA,L]
 RewriteRule ^test-result/insert/test-result php/test-result/insert.test_result.php [QSA,L]
 RewriteRule ^test-result/update/test-result-publish-flags php/test-result/update.test_result_publish_flags.php [QSA,L]
 RewriteRule ^test-result/update/test-result php/test-result/update.test_result.php [QSA,L]
