--- a/.htaccess
+++ b/.htaccess
@@ -88,21 +88,22 @@ RewriteRule ^alias/get/aliases php/alias/get.aliases.php [QSA,L]
 RewriteRule ^alias/get/color-tags php/alias/get.color_tags.php [QSA,L]
 RewriteRule ^alias/get/educational-materials php/alias/get.educational.materials.php [QSA,L]
 RewriteRule ^alias/get/expressions php/alias/get.expressions.php [QSA,L]
+RewriteRule ^alias/get/hospital-maps php/alias/get.hospital.maps.php [QSA,L]
 RewriteRule ^alias/get/source-databases php/alias/get.source_databases.php [QSA,L]
 RewriteRule ^alias/insert/alias php/alias/insert.alias.php [QSA,L]
 RewriteRule ^alias/update/alias php/alias/update.alias.php [QSA,L]
 RewriteRule ^alias/update/publish-flags php/alias/update.alias_publish_flags.php [QSA,L]
 
 # Application
-RewriteRule ^application/get/application-build api/application/get.application_build.php [QSA,L]
+RewriteRule ^application/get/application-build php/application/get.application_build.php [QSA,L]
 RewriteRule ^application/get/config config.json [QSA,L]
-RewriteRule ^application/get/source-databases api/application/get.source_databases.php [QSA,L]
+RewriteRule ^application/get/source-databases php/application/get.source_databases.php [QSA,L]
 RewriteRule ^application/update/source-databases php/application/update.source_databases.php [QSA,L]
 
 # Cron Logs Section
-RewriteRule ^cron/get/cron-chart-logs api/cron/get.cron_chart_logs.php [QSA,L]
-RewriteRule ^cron/get/cron-details api/cron/get.cron_details.php [QSA,L]
-RewriteRule ^cron/get/cron-list-logs api/cron/get.cron_list_logs.php [QSA,L]
+RewriteRule ^cron/get/cron-chart-logs php/cron/get.cron_chart_logs.php [QSA,L]
+RewriteRule ^cron/get/cron-details php/cron/get.cron_details.php [QSA,L]
+RewriteRule ^cron/get/cron-list-logs php/cron/get.cron_list_logs.php [QSA,L]
 RewriteRule ^cron/update/cron php/cron/update.cron.php [QSA,L]
 
 # Diagnosis Translation Section
@@ -152,19 +153,19 @@ RewriteRule ^educational-material/update/educational-material php/educational-ma
 
 # Email Section
 RewriteRule ^email/delete/email php/email/delete.email.php [QSA,L]
-RewriteRule ^email/get/email-chart-logs api/email/get.email_chart_logs.php [QSA,L]
-RewriteRule ^email/get/email-details api/email/get.email_details.php [QSA,L]
-RewriteRule ^email/get/email-list-logs api/email/get.email_list_logs.php [QSA,L]
-RewriteRule ^email/get/email-templates api/email/get.email_templates.php [QSA,L]
-RewriteRule ^email/get/email-types api/email/get.email_types.php [QSA,L]
+RewriteRule ^email/get/email-chart-logs php/email/get.email_chart_logs.php [QSA,L]
+RewriteRule ^email/get/email-details php/email/get.email_details.php [QSA,L]
+RewriteRule ^email/get/email-list-logs php/email/get.email_list_logs.php [QSA,L]
+RewriteRule ^email/get/email-templates php/email/get.email_templates.php [QSA,L]
+RewriteRule ^email/get/email-types php/email/get.email_types.php [QSA,L]
 RewriteRule ^email/insert/email php/email/insert.email.php [QSA,L]
 RewriteRule ^email/update/email php/email/update.email.php [QSA,L]
 
 # Hospital Map Section
 RewriteRule ^hospital-map/delete/hospital-map php/hospital-map/delete.hospital_map.php [QSA,L]
-RewriteRule ^hospital-map/generate-qr-code api/hospital-map/generate_QR_code.php [QSA,L]
-RewriteRule ^hospital-map/get/hospital-map-details api/hospital-map/get.hospital_map_details.php [QSA,L]
-RewriteRule ^hospital-map/get/hospital-maps api/hospital-map/get.hospital_maps.php [QSA,L]
+RewriteRule ^hospital-map/generate-qr-code php/hospital-map/generate_QR_code.php [QSA,L]
+RewriteRule ^hospital-map/get/hospital-map-details php/hospital-map/get.hospital_map_details.php [QSA,L]
+RewriteRule ^hospital-map/get/hospital-maps php/hospital-map/get.hospital_maps.php [QSA,L]
 RewriteRule ^hospital-map/insert/hospital-map php/hospital-map/insert.hospital_map.php [QSA,L]
 RewriteRule ^hospital-map/update/hospital-map php/hospital-map/update.hospital_map.php [QSA,L]
 
@@ -172,26 +173,27 @@ RewriteRule ^hospital-map/update/hospital-map php/hospital-map/update.hospital_m
 RewriteRule ^install/check-aria-connection php/install/check_aria_connection.php [QSA,L]
 RewriteRule ^install/check-mosaiq-connection php/install/check_mosaiq_connection.php [QSA,L]
 RewriteRule ^install/check-opal-connection php/install/check_opal_connection.php [QSA,L]
-RewriteRule ^install/write-configurations php/install/write_configurations.php [QSA,L]
 RewriteRule ^install/register-admin php/install/register_admin.php [QSA,L]
+RewriteRule ^install/verify-requirements php/install/verify_requirements.php [QSA,L]
+RewriteRule ^install/write-configurations php/install/write_configurations.php [QSA,L]
 
 # Notification Section
 RewriteRule ^notification/delete/notification php/notification/delete.notification.php [QSA,L]
-RewriteRule ^notification/get/notification-chart-logs api/notification/get.notification_chart_logs.php [QSA,L]
-RewriteRule ^notification/get/notification-details api/notification/get.notification_details.php [QSA,L]
-RewriteRule ^notification/get/notification-list-logs api/notification/get.notification_list_logs.php [QSA,L]
-RewriteRule ^notification/get/notification-types api/notification/get.notification_types.php [QSA,L]
-RewriteRule ^notification/get/notifications api/notification/get.notifications.php [QSA,L]
+RewriteRule ^notification/get/notification-chart-logs php/notification/get.notification_chart_logs.php [QSA,L]
+RewriteRule ^notification/get/notification-details php/notification/get.notification_details.php [QSA,L]
+RewriteRule ^notification/get/notification-list-logs php/notification/get.notification_list_logs.php [QSA,L]
+RewriteRule ^notification/get/notification-types php/notification/get.notification_types.php [QSA,L]
+RewriteRule ^notification/get/notifications php/notification/get.notifications.php [QSA,L]
 RewriteRule ^notification/insert/notification php/notification/insert.notification.php [QSA,L]
 RewriteRule ^notification/update/notification php/notification/update.notification.php [QSA,L]
 
 # Patient Section
-RewriteRule ^patient/email-in-use api/patient/email_in_use.php [QSA,L]
-RewriteRule ^patient/find-patient api/patient/find_patient.php [QSA,L]
-RewriteRule ^patient/get/patient-activities api/patient/get.patient_activities.php [QSA,L]
-RewriteRule ^patient/get/patient-details api/patient/get.patient_details.php [QSA,L]
-RewriteRule ^patient/get/patients api/patient/get.patients.php [QSA,L]
-RewriteRule ^patient/get/security-questions api/patient/get.security_questions.php [QSA,L]
+RewriteRule ^patient/email-in-use php/patient/email_in_use.php [QSA,L]
+RewriteRule ^patient/find-patient php/patient/find_patient.php [QSA,L]
+RewriteRule ^patient/get/patient-activities php/patient/get.patient_activities.php [QSA,L]
+RewriteRule ^patient/get/patient-details php/patient/get.patient_details.php [QSA,L]
+RewriteRule ^patient/get/patients php/patient/get.patients.php [QSA,L]
+RewriteRule ^patient/get/security-questions php/patient/get.security_questions.php [QSA,L]
 RewriteRule ^patient/insert/patient php/patient/insert.patient.php [QSA,L]
 RewriteRule ^patient/toggle/block php/patient/toggle_block.php [QSA,L]
 RewriteRule ^patient/update/patient-publish-flags php/patient/update.patient_publish_flags.php [QSA,L]
