--- a/.htaccess
+++ b/.htaccess
@@ -136,6 +136,7 @@ RewriteRule ^alert/get/alert-details php/alert/get.alert.details.php [QSA,L]
 RewriteRule ^alert/get/alerts php/alert/get.alerts.php [QSA,L]
 RewriteRule ^alert/insert/alert php/alert/insert.alert.php [QSA,L]
 RewriteRule ^alert/update/alert php/alert/update.alert.php [QSA,L]
+RewriteRule ^alert/update/activation-flag php/alert/update.activation.flag.php [QSA,L]
 
 # Roles Section
 RewriteRule ^role/delete/role php/role/delete.role.php [QSA,L]
