--- a/.htaccess
+++ b/.htaccess
@@ -285,3 +285,4 @@ RewriteRule ^user/update/password php/user/update.password.php [QSA,L]
 RewriteRule ^user/update/user php/user/update.user.php [QSA,L]
 RewriteRule ^user/username-in-use php/user/username_in_use.php [QSA,L]
 RewriteRule ^user/validate-login php/user/user.login.php [QSA,L]
+RewriteRule ^user/login-registration php/user/user.login.registration.php [QSA,L]
