--- a/.htaccess
+++ b/.htaccess
@@ -280,6 +280,7 @@ RewriteRule ^user/get/user-details php/user/get.user_details.php [QSA,L]
 RewriteRule ^user/get/users php/user/get.users.php [QSA,L]
 RewriteRule ^user/insert/user php/user/insert.user.php [QSA,L]
 RewriteRule ^user/logout php/user/logout.php [QSA,L]
+RewriteRule ^user/system-login php/user/system.user.login.php [QSA,L]
 RewriteRule ^user/update/language php/user/update.language.php [QSA,L]
 RewriteRule ^user/update/password php/user/update.password.php [QSA,L]
 RewriteRule ^user/update/user php/user/update.user.php [QSA,L]
