opal-559 - added insert patient diagnosis.

--- a/.htaccess
+++ b/.htaccess
@@ -134,6 +134,7 @@ RewriteRule ^diagnosis-translation/get/diagnoses php/diagnosis-translation/get.d
 RewriteRule ^diagnosis-translation/get/educational-materials php/diagnosis-translation/get.educational.materials.php [QSA,L]
 RewriteRule ^diagnosis-translation/get/patient-diagnoses php/diagnosis-translation/get.patient.diagnoses.php [QSA,L]
 RewriteRule ^diagnosis-translation/insert/diagnosis-translation php/diagnosis-translation/insert.diagnosis_translation.php [QSA,L]
+RewriteRule ^diagnosis-translation/insert/patient-diagnosis php/diagnosis-translation/insert.patient.diagnosis.php [QSA,L]
 RewriteRule ^diagnosis-translation/update/diagnosis-translation php/diagnosis-translation/update.diagnosis_translation.php [QSA,L]
 
 # Educational Material Section
