--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ publisher/php/davTestNotification.php
 publisher/modules/ym.pm
 publisher/modules/Document2.pm
 publisher/dataControl2.pl
+dbv/config.php
