--- a/.htaccess
+++ b/.htaccess
@@ -185,10 +185,12 @@ RewriteRule ^library/get/libraries php/questionnaire/get.libraries.php [QSA,L]
 RewriteRule ^library/insert/library php/questionnaire/insert.library.php [QSA,L]
 
 #Master Source Section
-RewriteRule ^master-source/get/diagnoses php/master-source/get.master.source.diagnoses.php [QSA,L]
-RewriteRule ^master-source/get/diagnosis-exists php/master-source/is.master.source.diagnosis.exists.php [QSA,L]
+RewriteRule ^master-source/get/diagnoses php/master-source/get.source.diagnoses.php [QSA,L]
+RewriteRule ^master-source/get/diagnosis-details php/master-source/get.source.diagnosis.details.php [QSA,L]
+RewriteRule ^master-source/get/diagnosis-exists php/master-source/is.source.diagnosis.exists.php [QSA,L]
 RewriteRule ^master-source/get/external-source-db php/master-source/get.external.source.db.php [QSA,L]
-RewriteRule ^master-source/insert/diagnosis php/master-source/insert.master.source.diagnosis.php [QSA,L]
+RewriteRule ^master-source/insert/diagnosis php/master-source/insert.source.diagnosis.php [QSA,L]
+RewriteRule ^master-source/update/diagnosis php/master-source/update.source.diagnosis.php [QSA,L]
 
 # Notification Section
 RewriteRule ^notification/delete/notification php/notification/delete.notification.php [QSA,L]
