--- a/.htaccess
+++ b/.htaccess
@@ -186,12 +186,18 @@ RewriteRule ^library/insert/library php/questionnaire/insert.library.php [QSA,L]
 
 #Master Source Section
 RewriteRule ^master-source/delete/diagnoses php/master-source/delete.diagnoses.php [QSA,L]
+RewriteRule ^master-source/delete/test-results php/master-source/delete.test.results.php [QSA,L]
 RewriteRule ^master-source/get/diagnoses php/master-source/get.source.diagnoses.php [QSA,L]
+RewriteRule ^master-source/get/test-results php/master-source/get.source.test.results.php [QSA,L]
 RewriteRule ^master-source/get/diagnosis-details php/master-source/get.source.diagnosis.details.php [QSA,L]
 RewriteRule ^master-source/get/diagnosis-exists php/master-source/is.source.diagnosis.exists.php [QSA,L]
 RewriteRule ^master-source/get/external-source-db php/master-source/get.external.source.db.php [QSA,L]
+RewriteRule ^master-source/get/test-result-details php/master-source/get.source.test.result.details.php [QSA,L]
+RewriteRule ^master-source/get/test-result-exists php/master-source/is.source.test.result.exists.php [QSA,L]
 RewriteRule ^master-source/insert/diagnoses php/master-source/insert.source.diagnosis.php [QSA,L]
+RewriteRule ^master-source/insert/test-results php/master-source/insert.source.test.results.php [QSA,L]
 RewriteRule ^master-source/update/diagnoses php/master-source/update.source.diagnosis.php [QSA,L]
+RewriteRule ^master-source/update/test-results php/master-source/update.source.test.results.php [QSA,L]
 
 # Notification Section
 RewriteRule ^notification/delete/notification php/notification/delete.notification.php [QSA,L]
