opal-609 - API calls for master source alias done.

--- a/.htaccess
+++ b/.htaccess
@@ -185,17 +185,23 @@ RewriteRule ^library/get/libraries php/questionnaire/get.libraries.php [QSA,L]
 RewriteRule ^library/insert/library php/questionnaire/insert.library.php [QSA,L]
 
 #Master Source Section
+RewriteRule ^master-source/delete/aliases php/master-source/delete.aliases.php [QSA,L]
 RewriteRule ^master-source/delete/diagnoses php/master-source/delete.diagnoses.php [QSA,L]
 RewriteRule ^master-source/delete/test-results php/master-source/delete.test.results.php [QSA,L]
+RewriteRule ^master-source/get/aliases php/master-source/get.source.aliases.php [QSA,L]
 RewriteRule ^master-source/get/diagnoses php/master-source/get.source.diagnoses.php [QSA,L]
 RewriteRule ^master-source/get/test-results php/master-source/get.source.test.results.php [QSA,L]
+RewriteRule ^master-source/get/alias-details php/master-source/get.source.alias.details.php [QSA,L]
+RewriteRule ^master-source/get/alias-exists php/master-source/is.source.alias.exists.php [QSA,L]
 RewriteRule ^master-source/get/diagnosis-details php/master-source/get.source.diagnosis.details.php [QSA,L]
 RewriteRule ^master-source/get/diagnosis-exists php/master-source/is.source.diagnosis.exists.php [QSA,L]
 RewriteRule ^master-source/get/external-source-db php/master-source/get.external.source.db.php [QSA,L]
 RewriteRule ^master-source/get/test-result-details php/master-source/get.source.test.result.details.php [QSA,L]
 RewriteRule ^master-source/get/test-result-exists php/master-source/is.source.test.result.exists.php [QSA,L]
+RewriteRule ^master-source/insert/aliases php/master-source/insert.source.alias.php [QSA,L]
 RewriteRule ^master-source/insert/diagnoses php/master-source/insert.source.diagnosis.php [QSA,L]
 RewriteRule ^master-source/insert/test-results php/master-source/insert.source.test.results.php [QSA,L]
+RewriteRule ^master-source/update/aliases php/master-source/update.source.alias.php [QSA,L]
 RewriteRule ^master-source/update/diagnoses php/master-source/update.source.diagnosis.php [QSA,L]
 RewriteRule ^master-source/update/test-results php/master-source/update.source.test.results.php [QSA,L]
 
