OPAL-609 - finished adding API calls for source tasks, documents and appointments

--- a/.htaccess
+++ b/.htaccess
@@ -188,8 +188,8 @@ RewriteRule ^library/insert/library php/questionnaire/insert.library.php [QSA,L]
 RewriteRule ^master-source/delete/appointments php/master-source/delete.appointments.php [QSA,L]
 RewriteRule ^master-source/delete/diagnoses php/master-source/delete.diagnoses.php [QSA,L]
 RewriteRule ^master-source/delete/documents php/master-source/delete.aliases.php [QSA,L]
+RewriteRule ^master-source/delete/tasks php/master-source/delete.tasks.php [QSA,L]
 RewriteRule ^master-source/delete/test-results php/master-source/delete.test.results.php [QSA,L]
-RewriteRule ^master-source/delete/tasks php/master-source/delete.aliases.php [QSA,L]
 RewriteRule ^master-source/get/aliases php/master-source/get.source.aliases.php [QSA,L]
 RewriteRule ^master-source/get/diagnoses php/master-source/get.source.diagnoses.php [QSA,L]
 RewriteRule ^master-source/get/test-results php/master-source/get.source.test.results.php [QSA,L]
