[OPAL-688] Add php support for all DB calls in patientReport.js
Added new template php files for find by mrn & ramq, as well as get report
Implemented class methods in patientReports.php for find by mrn & ramq
Implemented class method for report generation
	SQL queries written for:
		diagnosis
		appointments
		questionnaires
		education
		testresults
		notes
		clinicalnotes
		treatingteam
		general
	All results returned as a PHP array in JSON format, keyed by report segment name

--- a/.htaccess
+++ b/.htaccess
@@ -208,6 +208,9 @@ RewriteRule ^patient/update/patient php/patient/update.patient.php [QSA,L]
 
 # Patient Reports Section
 RewriteRule ^patient-reports/find/patient-name php/patient-reports/find_name.php [QSA,L]
+RewriteRule ^patient-reports/find/patient-mrn php/patient-reports/find_mrn.php [QSA,L]
+RewriteRule ^patient-reports/find/patient-ramq php/patient-reports/find_ramq.php [QSA,L]
+RewriteRule ^patient-reports/get/patient-data php/patient-reports/get.patient_data.php [QSA,L]
 
 # Post Section
 RewriteRule ^post/delete/post php/post/delete.post.php [QSA,L]
