--- a/.htaccess
+++ b/.htaccess
@@ -211,6 +211,12 @@ RewriteRule ^patient-reports/find/patient-name php/patient-reports/find_name.php
 RewriteRule ^patient-reports/find/patient-mrn php/patient-reports/find_mrn.php [QSA,L]
 RewriteRule ^patient-reports/find/patient-ramq php/patient-reports/find_ramq.php [QSA,L]
 RewriteRule ^patient-reports/get/patient-data php/patient-reports/get.patient_data.php [QSA,L]
+RewriteRule ^patient-reports/find/education-options php/patient-reports/find_educ.php [QSA,L]
+RewriteRule ^patient-reports/get/educ-report php/patient-reports/get.education_report.php [QSA,L]
+RewriteRule ^patient-reports/find/questionnaire-options php/patient-reports/find_qst.php [QSA,L]
+RewriteRule ^patient-reports/get/qst-report php/patient-reports/get.questionnaire_report.php [QSA,L]
+RewriteRule ^patient-reports/get/pat-report php/patient-reports/get.patient_report.php [QSA,L]
+
 
 # Post Section
 RewriteRule ^post/delete/post php/post/delete.post.php [QSA,L]
