--- a/.htaccess
+++ b/.htaccess
@@ -251,7 +251,7 @@ RewriteRule ^role/insert/role php/role/insert.role.php [QSA,L]
 RewriteRule ^role/update/role php/role/update.role.php [QSA,L]
 
 # Studies Section
-RewriteRule ^study/delete/study php/study/delete.study.php [QSA,L]
+RewriteRule ^study/get/patients-list php/study/get.patients.list.php [QSA,L]
 RewriteRule ^study/get/study-details php/study/get.study.details.php [QSA,L]
 RewriteRule ^study/get/studies php/study/get.studies.php [QSA,L]
 RewriteRule ^study/insert/study php/study/insert.study.php [QSA,L]
